--- a/arch/arm/configs/cancro_user_defconfig
+++ b/arch/arm/configs/cancro_user_defconfig
@@ -41,8 +41,8 @@ CONFIG_IRQ_WORK=y
 #
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
-CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-omni-"
+CONFIG_CROSS_COMPILE="arm-eabi-"
+CONFIG_LOCALVERSION="-sabermod"
 CONFIG_LOCALVERSION_AUTO=n
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -499,11 +499,8 @@ CONFIG_MSM_L2_SPM=y
 CONFIG_MSM_MULTIMEDIA_USE_ION=y
 CONFIG_MSM_OCMEM=y
 CONFIG_MSM_OCMEM_LOCAL_POWER_CTRL=y
-CONFIG_MSM_OCMEM_DEBUG=y
-# CONFIG_MSM_OCMEM_NONSECURE is not set
-# CONFIG_MSM_OCMEM_POWER_DEBUG is not set
-# CONFIG_MSM_OCMEM_DEBUG_ALWAYS_ON is not set
-# CONFIG_MSM_OCMEM_POWER_DISABLE is not set
+# CONFIG_MSM_OCMEM_DEBUG is not set
+
 CONFIG_SENSORS_ADSP=y
 # CONFIG_MSM_RTB is not set
 CONFIG_MSM_RTB_SEPARATE_CPUS=y
@@ -522,7 +519,7 @@ CONFIG_HAVE_ARCH_HAS_CURRENT_TIMER=y
 CONFIG_MSM_CACHE_DUMP=y
 CONFIG_MSM_CACHE_DUMP_ON_PANIC=y
 # CONFIG_MSM_HSIC_SYSMON is not set
-CONFIG_MSM_ENABLE_WDOG_DEBUG_CONTROL=y
+# CONFIG_MSM_ENABLE_WDOG_DEBUG_CONTROL is not set
 # CONFIG_USE_DEV_CTRL_VOLUME is not set
 # CONFIG_MSM_CPU_PWRCTL is not set
 # CONFIG_MSM_UARTDM_Core_v14 is not set
@@ -661,8 +658,8 @@ CONFIG_ENABLE_VMALLOC_SAVING=y
 CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_ALIGNMENT_TRAP=y
 # CONFIG_UACCESS_WITH_MEMCPY is not set
-# CONFIG_SECCOMP is not set
-CONFIG_CC_STACKPROTECTOR=y
+CONFIG_SECCOMP=y
+# CONFIG_CC_STACKPROTECTOR is not set
 # CONFIG_DEPRECATED_PARAM_STRUCT is not set
 # CONFIG_ARM_FLUSH_CONSOLE_ON_RESTART is not set
 CONFIG_CP_ACCESS=y
@@ -3403,7 +3400,7 @@ CONFIG_STACKTRACE=y
 # CONFIG_DEBUG_STACK_USAGE is not set
 # CONFIG_DEBUG_KOBJECT is not set
 # CONFIG_DEBUG_HIGHMEM is not set
-CONFIG_DEBUG_BUGVERBOSE=y
+# CONFIG_DEBUG_BUGVERBOSE is not set
 CONFIG_DEBUG_INFO=y
 # CONFIG_DEBUG_INFO_REDUCED is not set
 # CONFIG_DEBUG_VM is not set
@@ -3461,7 +3458,7 @@ CONFIG_BRANCH_PROFILE_NONE=y
 CONFIG_CPU_FREQ_SWITCH_PROFILER=y
 # CONFIG_FTRACE_STARTUP_TEST is not set
 # CONFIG_RING_BUFFER_BENCHMARK is not set
-CONFIG_DYNAMIC_DEBUG=y
+# CONFIG_DYNAMIC_DEBUG is not set
 # CONFIG_DMA_API_DEBUG is not set
 # CONFIG_ATOMIC64_SELFTEST is not set
 CONFIG_PANIC_ON_DATA_CORRUPTION=y
